# ztvs-plugins

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  go.work
.agents/rules/: cross-platform.md  git.md  ztvs.md
.agents/skills/git-flow/: SKILL.md
.agents/skills/plugin-dev/: SKILL.md
.agents/workflows/: build.md  git.md  pr.md  scan.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dummy-python/: plugin.yaml
plugin-axios-github-scan/: README.md  handshake.json  main.py  plugin.yaml  pyproject.toml
plugin-axios-github-scan/src/plugin_axios_github_scan/: main.py  scanner.py
plugin-axios-github-scan/src/plugin_axios_github_scan/checks/: axios.py  deployments.py
plugin-axios-mitigation/: check_dependencies.go  check_iocs.go  check_network.go  go.mod  go.sum  main.go  plugin.yaml
plugin-axios-mitigation/cmd/: main.go
plugin-axios-mitigation/pkg/checks/: check_dependencies.go  check_iocs.go  check_network.go
plugin-os/: go.mod  main.go  plugin.yaml  ssh_check.go  ssh_check_test.go
plugin-os/cmd/: main.go
plugin-os/pkg/checks/: ssh_config.go  ssh_config_test.go
registry/: index.json
